--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Music Archive</title>
+    <link rel="preconnect" href="https://musicarchive.onrender.com" />
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
